--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -29,7 +29,15 @@
 .text-primary {
   color: $primary-color;
 }
+.round-img {
+  border-radius: 50%;
+}
 
+.line {
+  height: 1px;
+  background: #ccc;
+  margin: 1.5rem 0;
+}
 //BackGrounds
 
 .bg {
@@ -118,6 +126,29 @@
   }
   &.alert-danger {
     @include set-background($danger-color);
+  }
+}
+//Badges
+
+.badge {
+  font-size: 0.8rem;
+  padding: 0.1rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: $light-color;
+  color: #333;
+
+  &.badge-primary {
+    @include set-background($primary-color);
+  }
+  &.badge-dark {
+    @include set-background($dark-color);
+  }
+  &.badge-danger {
+    @include set-background($danger-color);
+  }
+  &.badge-success {
+    @include set-background($success-color);
   }
 }
 
